--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!-- LEFT SIDE -->
     <div class="left">
-        <img src="profile.jpg" alt="Photo Rania Bejja">
+        <img src="IMG_6358.jpeg" alt="Rania Bejja">
 
         <h2>Rania Bejja</h2>
         <p>
